@@ -2,8 +2,6 @@
 set (LUA_SCRIPTS
     snort.lua
     snort_defaults.lua
-    classification.lua
-    reference.lua
     sample.rules
 )
 
