@@ -1,5 +1,6 @@
 15/03/18 - build 142
 
+-- folded classification.lua and reference.lua into snort_defaults.lua
 -- apply defaults from parameter tables instead of relying on ctors etc.
 -- fix static analysis issues reported by xcode
 -- change policy names with a-b form to a_b for consistency
